# pim-pf-nota

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  divulgacao.yml
output/: dossie.html  guia.html  nota_pim_2026-04.tex  relatorio.html
src/pim_report/: __init__.py  __main__.py  analysis.py  cache.py  charts.py  config.py  exceptions.py  pipeline.py  render_html.py  render_latex.py  schema.py  sidra_client.py  special_cases.py  transform.py
templates/: dossie.html.j2  guia.html.j2  manual.tex.j2  nota.tex.j2  relatorio.html.j2
tests/: conftest.py  test_analysis.py  test_cache.py  test_charts.py  test_pipeline.py  test_render.py  test_schema.py  test_sidra_client.py  test_special_cases.py  test_transform.py
tests/fixtures/: sidra_resposta_feliz.json  sidra_resposta_malformada.json
