[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pim-report"
version = "0.1.0"
description = "Nota informativa automatizada da PIM-PF (IBGE) — esteira Python com tratamento de erro (Martin Cap.7)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Joao Zangrandi", email = "joaozangrandii@gmail.com" }]
dependencies = [
    "sidrapy>=0.1.4",
    "requests>=2.31",
    "pandas>=2.1",
    "pandera>=0.18",
    "tenacity>=8.2",
    "matplotlib>=3.8",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
pim-report = "pim_report.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pim_report = ["py.typed"]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]
